--- a/plone/resourceeditor/resources/filemanager/styles/filemanager.css
+++ b/plone/resourceeditor/resources/filemanager/styles/filemanager.css
@@ -52,7 +52,7 @@
 
 #splitter {
 	background-color: white;
-	height: 400px;
+	height: 300px;
 	border: 1px solid #ccc;
 	/* no padding allowed */
 }
@@ -460,7 +460,7 @@ button.ON {
 	padding: 5px 5px 5px 0;
 }
 
-UL.jqueryFileTree {
+ul.jqueryFileTree {
 	font-family: Verdana, sans-serif;
 	font-size: 11px;
 	line-height: 18px;
@@ -468,7 +468,7 @@ UL.jqueryFileTree {
 	margin: 0px;
 }
 
-UL.jqueryFileTree LI {
+ul.jqueryFileTree LI {
 	list-style: none;
 	padding: 0px;
 	padding-left: 20px;
@@ -476,264 +476,264 @@ UL.jqueryFileTree LI {
 	white-space: nowrap;
 }
 
-UL.jqueryFileTree A {
+ul.jqueryFileTree A {
 	color: #333;
 	text-decoration: none;
 	display: block;
 	padding: 0px 2px;
 }
 
-UL.jqueryFileTree A:hover, UL.jqueryFileTree A:selected {
+ul.jqueryFileTree a:hover, ul.jqueryFileTree a:selected {
 	background: #eee;
 }
 
 /* Core Styles */
-.jqueryFileTree LI.directory {
+.jqueryFileTree li.directory {
 	background: url(../images/directory.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.expanded {
+.jqueryFileTree li.expanded {
 	background: url(../images/folder_open.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.file {
+.jqueryFileTree li.file {
 	background: url(../images/file.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.wait {
+.jqueryFileTree li.wait {
 	background: url(../images/spinner.gif) left top no-repeat;
 }
 
 /* File Extensions*/
-.jqueryFileTree LI.ext_3gp {
+.jqueryFileTree li.ext_3gp {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_afp {
+.jqueryFileTree li.ext_afp {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_afpa {
+.jqueryFileTree li.ext_afpa {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_asp {
+.jqueryFileTree li.ext_asp {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_aspx {
+.jqueryFileTree li.ext_aspx {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_avi {
+.jqueryFileTree li.ext_avi {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_bat {
+.jqueryFileTree li.ext_bat {
 	background: url(../images/application.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_bmp {
+.jqueryFileTree li.ext_bmp {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_c {
+.jqueryFileTree li.ext_c {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_cfm {
+.jqueryFileTree li.ext_cfm {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_cgi {
+.jqueryFileTree li.ext_cgi {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_com {
+.jqueryFileTree li.ext_com {
 	background: url(../images/application.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_cpp {
+.jqueryFileTree li.ext_cpp {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_css {
+.jqueryFileTree li.ext_css {
 	background: url(../images/css.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_doc {
+.jqueryFileTree li.ext_doc {
 	background: url(../images/doc.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_exe {
+.jqueryFileTree li.ext_exe {
 	background: url(../images/application.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_gif {
+.jqueryFileTree li.ext_gif {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_fla {
+.jqueryFileTree li.ext_fla {
 	background: url(../images/flash.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_h {
+.jqueryFileTree li.ext_h {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_htm {
+.jqueryFileTree li.ext_htm {
 	background: url(../images/html.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_html {
+.jqueryFileTree li.ext_html {
 	background: url(../images/html.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_jar {
+.jqueryFileTree li.ext_jar {
 	background: url(../images/java.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_jpg {
+.jqueryFileTree li.ext_jpg {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_jpeg {
+.jqueryFileTree li.ext_jpeg {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_js {
+.jqueryFileTree li.ext_js {
 	background: url(../images/script.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_lasso {
+.jqueryFileTree li.ext_lasso {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_log {
+.jqueryFileTree li.ext_log {
 	background: url(../images/txt.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_m4p {
+.jqueryFileTree li.ext_m4p {
 	background: url(../images/music.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_mov {
+.jqueryFileTree li.ext_mov {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_mp3 {
+.jqueryFileTree li.ext_mp3 {
 	background: url(../images/music.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_mp4 {
+.jqueryFileTree li.ext_mp4 {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_mpg {
+.jqueryFileTree li.ext_mpg {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_mpeg {
+.jqueryFileTree li.ext_mpeg {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_ogg {
+.jqueryFileTree li.ext_ogg {
 	background: url(../images/music.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_pcx {
+.jqueryFileTree li.ext_pcx {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_pdf {
+.jqueryFileTree li.ext_pdf {
 	background: url(../images/pdf.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_php {
+.jqueryFileTree li.ext_php {
 	background: url(../images/php.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_png {
+.jqueryFileTree li.ext_png {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_ppt {
+.jqueryFileTree li.ext_ppt {
 	background: url(../images/ppt.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_psd {
+.jqueryFileTree li.ext_psd {
 	background: url(../images/psd.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_pl {
+.jqueryFileTree li.ext_pl {
 	background: url(../images/script.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_py {
+.jqueryFileTree li.ext_py {
 	background: url(../images/script.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_rb {
+.jqueryFileTree li.ext_rb {
 	background: url(../images/ruby.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_rbx {
+.jqueryFileTree li.ext_rbx {
 	background: url(../images/ruby.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_rhtml {
+.jqueryFileTree li.ext_rhtml {
 	background: url(../images/ruby.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_rpm {
+.jqueryFileTree li.ext_rpm {
 	background: url(../images/linux.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_ruby {
+.jqueryFileTree li.ext_ruby {
 	background: url(../images/ruby.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_sql {
+.jqueryFileTree li.ext_sql {
 	background: url(../images/db.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_swf {
+.jqueryFileTree li.ext_swf {
 	background: url(../images/flash.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_tif {
+.jqueryFileTree li.ext_tif {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_tiff {
+.jqueryFileTree li.ext_tiff {
 	background: url(../images/picture.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_txt {
+.jqueryFileTree li.ext_txt {
 	background: url(../images/txt.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_vb {
+.jqueryFileTree li.ext_vb {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_wav {
+.jqueryFileTree li.ext_wav {
 	background: url(../images/music.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_wmv {
+.jqueryFileTree li.ext_wmv {
 	background: url(../images/film.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_xls {
+.jqueryFileTree li.ext_xls {
 	background: url(../images/xls.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_xml {
+.jqueryFileTree li.ext_xml {
 	background: url(../images/code.png) left top no-repeat;
 }
 
-.jqueryFileTree LI.ext_zip {
+.jqueryFileTree li.ext_zip {
 	background: url(../images/zip.png) left top no-repeat;
 }
 
