Fix drag-and-drop bugs

--- a/plone/resourceeditor/resources/filemanager/styles/filemanager.css
+++ b/plone/resourceeditor/resources/filemanager/styles/filemanager.css
@@ -386,6 +386,10 @@ button.ON {
 	background-color: white;
 }
 
+#fileeditor #fileselector li label {
+	font-weight: normal;
+}
+
 #fileeditor #editors li{
 	display:none;
 }
